--- a/_includes/page-author.html
+++ b/_includes/page-author.html
@@ -11,7 +11,7 @@
     <img src="{{ author_picture }}" class="author-avatar u-photo" alt="{{ author.name }}">
   {%- endif -%}
 
-  <div class="author-info">
+<!--   <div class="author-info">
     {%- if author.name -%}
       <div class="author-name">
         {% if site.data.text[site.locale].by %}<span>{{ site.data.text[site.locale].by }}</span> {% endif %}<span class="p-name">{{ author.name }}</span>
@@ -33,5 +33,5 @@
     {%- endif -%}
     {% if site.read_time %}{% include read-time.html %}{% endif %}
     {% if page.date %}{% include page-date.html %}{% endif %}
-  </div>
+  </div> -->
 </div>
