prepare new layouts.

--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -4,7 +4,7 @@ layout: page
 
 {{ content }}
 
-<ul class="taxonomy-index">
+<!-- <ul class="taxonomy-index">
   {% assign postsInYear = site.posts | group_by_exp: 'post', 'post.date | date: "%Y"' %}
   {% for year in postsInYear %}
     <li>
@@ -25,5 +25,18 @@ layout: page
       {% endfor %}
     </div>
     <a href="#page-title" class="back-to-top">{{ site.data.text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
+  </section>
+{% endfor %} -->
+
+{% assign postsByYear = site.posts | group_by_exp: 'post', 'post.date | date: "%Y"' %}
+{% for year in postsByYear %}
+  <section id="{{ year.name }}" class="taxonomy-section">
+    <!-- <h2 class="taxonomy-title">{{ year.name }}</h2> -->
+    <div class="entries-{{ page.entries_layout | default: 'list' }}">
+      {% for entry in year.items %}
+        {% include entry.html %}
+      {% endfor %}
+    </div>
+    <!-- <a href="#page-title" class="back-to-top">{{ site.data.text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a> -->
   </section>
 {% endfor %}
