--- a/_layouts/home-new.html
+++ b/_layouts/home-new.html
@@ -1,19 +1,31 @@
 ---
-layout: page
+layout: default
 ---
 
-{{ content }}
+<main id="main" class="main-content" aria-label="Content">
+  <article class="h-entry">
+    {% include page-image.html %}
+    <div class="page-wrapper">
+      <header class="page-header">
+        {% assign title = page.title | markdownify | strip_html %}
+        {% if page.link %}
+          <h1 id="page-title" class="page-title p-name"><a href="{{ page.link }}">{{ title }} <span class="link-arrow">&rarr;</span></a></h1>
+        {% else %}
+          <h1 id="page-title" class="page-title p-name">{{ title }}</h1>
+        {% endif %}
+      </header>
 
-{% include masthead.html %}
+      <div class="page-sidebar">
+        {% include page-author.html %}
+        <!-- {% include page-categories.html %} -->
+        <!-- {% include page-tags.html %} -->
+      </div>
 
-<div class="entries-{{ page.entries_layout | default: 'list' }}">
-  {%- if site.plugins contains 'jekyll-paginate' and page.paginate or site.gems contains 'jekyll-paginate' and page.paginate -%}
-    {%- comment -%}
-      Add paginator.posts loop if jekyll-paginate plugin is enabled
-      and page.paginate == true
-    {%- endcomment -%}
-    {% include posts-paginated.html %}
-  {%- else -%}
-    {% include posts-limit.html %}
-  {%- endif -%}
-</div>
+      <div class="page-content">
+        <div class="e-content">
+          {{ content }}
+        </div>
+      </div>
+    </div>
+  </article>
+</main>
