remove stupid names and intro

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
     {% if site.copyright %}
       {{ site.copyright | markdownify }}
     {% else %}
-	  <p>&copy; 2015-{{ site.time | date: '%Y' }} <a href="{{ site.url }}">Rongya Luo</a>. {{ site.data.text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/mmistakes/so-simple-theme" rel="nofollow">So Simple</a>. <a href="http://www.miitbeian.gov.cn/" rel="nofollow">京ICP备15006737号</a>.</p>
+	  <p>&copy; 2015-{{ site.time | date: '%Y' }} <a href="{{ site.url }}">Rongya Luo</a>. {{ site.data.text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/mmistakes/so-simple-theme" rel="nofollow">So Simple</a>. <a href="http://www.beian.miit.gov.cn" rel="nofollow">京ICP备15006737号</a>.</p>
     {% endif %}
   </div>
 </footer>
